--- a/src/app/components/MasterGallery/index.lazy.scss
+++ b/src/app/components/MasterGallery/index.lazy.scss
@@ -47,7 +47,7 @@ html.is-master-gallery-open {
   }
 
   // mediaEl
-  .Gallery-item > :not(.Caption) {
+  .Gallery-item> :not(.Caption) {
     max-width: 100%;
     height: auto;
   }
@@ -114,14 +114,15 @@ html.is-master-gallery-open {
       width: 100%;
     }
   }
+
   .MasterGallery {
     .Gallery-pane {
       margin: 0 $unit/4;
     }
 
     .Caption {
-      margin: $unit;
-      max-width: calc(100% - $unit * 2);
+      margin: $unit 0;
+      max-width: 100%;
     }
   }
 }
